Search single element in an array